--- a/src/main/app/src/index.css
+++ b/src/main/app/src/index.css
@@ -14,9 +14,11 @@ code {
 
 .wrapper {
   margin: 0 auto;
-  padding-top: 5rem;
-  width: 500px;
-  border: 1px;
-  border-color: grey;
+  margin-top: 5rem;
+  width: 1200px;
+  border: 1;
+  border-color: rgb(181, 179, 201);
   border-radius: 5px;
+  background-color: #dfdbdb;
 }
+
